tests/snapshots/runtime_error_fixtures/boundary_return_string_as_int.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/boundary_return_string_as_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/boundary_return_string_as_int.flx
Error[E1004]: Type Error

I found a value with the wrong runtime type.

  examples/runtime_errors/boundary_return_string_as_int.flx:3:1
  |
3 | fn bad() -> Int {
  | ^^^^^^^^^^^^^^^^^
4 |     RuntimeErrors.BoundaryUnknown.dynamic_string()
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 | }
  | ^

Note:
  expected type: Int
  found type:    String
  runtime value:  "oops"

Help:
  Check the value flowing into this operation or add a conversion before this point.

Stack trace:
  at bad (examples/runtime_errors/boundary_return_string_as_int.flx:3:1)
  at <main> (examples/runtime_errors/boundary_return_string_as_int.flx:7:1)
== jit ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/boundary_return_string_as_int.flx
Error[E1004]: Type Error

I found a value with the wrong runtime type.

  examples/runtime_errors/boundary_return_string_as_int.flx:7:1
  |
7 | bad()
  | ^^^^^
  | ----- this value has runtime type `String`

Note:
  expected type: Int
  found type:    String
  runtime value:  "oops"

Help:
  Check the value flowing into this operation or add a conversion before this point.
